# migration-cli-agent

./: .gitignore
MigrationAgentViaCLI/: .gitignore  HOW_TO_RUN_THIS_AGENT.txt  README.md  angularjs-migration-input.json  my-migration-input.json  pyproject.toml  requirements.txt  run_fastapi.py  sampleapp1-workflow-input.json
MigrationAgentViaCLI/ide/vscode-extension/: README.md  package.json
MigrationAgentViaCLI/manifests/: assessment.agent.json  build-fix.agent.json  build-validation.agent.json  code-analysis.agent.json  code-transformation.agent.json  configuration-migration.agent.json  dependency-analysis.agent.json  orchestrator.agent.json  project-conversion.agent.json  report-generation.agent.json  repository-analysis.agent.json  test-validation.agent.json
MigrationAgentViaCLI/migration_agent_cli/: cli.py  registry.py
MigrationAgentViaCLI/migration_agent_cli/agents/: api_transformation.py  assessment.py  auth_transformation.py  code_analysis.py  code_transformer.py  dependency_analysis.py  ef_migration.py  frontend_migration.py  repository_analysis.py  simple_agents.py
MigrationAgentViaCLI/migration_agent_cli/api/: main.py
MigrationAgentViaCLI/migration_agent_cli/core/: agent_base.py  artifacts.py  guardrails.py  models.py
MigrationAgentViaCLI/migration_agent_cli/llm/: groq_client.py  microsoft_agent_adapter.py
MigrationAgentViaCLI/samples/SampleApp1/: Startup.cs  (+1 more)
MigrationAgentViaCLI/schemas/: agent-metadata.schema.json
MigrationAgentViaCLI/tests/: test_cli_smoke.py
MigrationAgentViaCLI/workflows/: dotnet-migration.workflow.json
(+11 files in other folders)
