[project]
name = "migration-agent-via-cli"
version = "0.1.0"
description = "Python CLI, FastAPI, and VS Code extension shell for independent .NET migration agents."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.0",
  "groq>=0.11.0",
  "agent-framework>=1.0.0",
  "jsonschema>=4.22.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
migration-agent = "migration_agent_cli.cli:app"

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["migration_agent_cli*"]
